fix: changed transition on card from all to only target the hover content. this was done to remove lag that occured on flex-wrap on the cards when resizing the screen faster than 0.5s and cause jitter on the #benefits cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,7 +198,7 @@ header {
   border-radius: 0.2em;
   padding: 0;
   box-shadow: rgba(70, 70, 70, 0.7) 1px 4px 8px;
-  transition: all ease 0.5s;
+  transition: box-shadow, transform ease .5s;
 }
 
 .card:hover {
